--- a/SkyObserver/app/src/main/res/menu/menu_bottom.xml
+++ b/SkyObserver/app/src/main/res/menu/menu_bottom.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tab2"
         app:showAsAction="ifRoom"
         android:icon="@android:drawable/ic_dialog_info"
-        android:title="정보" />
+        android:title="IoT" />
     <item
         android:id="@+id/tab3"
         app:showAsAction="ifRoom"
