--- a/SkyObserver/app/src/main/res/layout/activity_iot_state.xml
+++ b/SkyObserver/app/src/main/res/layout/activity_iot_state.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="IoT Actvity"
+            android:text="IoT 상태창"
             android:textAlignment="center"
             android:textSize="20dp"
             tools:layout_editor_absoluteX="-16dp"
@@ -37,25 +37,29 @@
         app:layout_constraintVertical_bias="0.002">
 
         <ImageButton
+            android:id="@+id/iotbutton1"
+            android:onClick="iotState"
             android:layout_width="170dp"
             android:layout_height="150dp"
             android:layout_marginLeft="30dp"
             tools:layout_editor_absoluteX="25dp"
-            tools:layout_editor_absoluteY="88dp"
-            android:id="@+id/iotbutton1"/>
+            tools:layout_editor_absoluteY="88dp"/>
         <ImageButton
+            android:id="@+id/iotbutton2"
+            android:onClick="iotState"
             android:layout_width="170dp"
             android:layout_height="150dp"
             android:layout_marginLeft="10sp"
             tools:layout_editor_absoluteX="25dp"
-            tools:layout_editor_absoluteY="88dp" />
+            tools:layout_editor_absoluteY="88dp"/>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="413dp"
         android:layout_height="158dp"
-        android:orientation="horizontal"
         android:layout_marginTop="30dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -64,6 +68,8 @@
         app:layout_constraintVertical_bias="0.306">
 
         <ImageButton
+            android:id="@+id/iotbutton3"
+            android:onClick="iotState"
             android:layout_width="170dp"
             android:layout_height="150dp"
             android:layout_marginLeft="25dp"
@@ -71,12 +77,67 @@
             tools:layout_editor_absoluteY="88dp" />
 
         <ImageButton
+            android:id="@+id/iotbutton4"
+            android:onClick="iotState"
             android:layout_width="170dp"
             android:layout_height="150dp"
             android:layout_marginLeft="10sp"
             tools:layout_editor_absoluteX="25dp"
             tools:layout_editor_absoluteY="88dp" />
+
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="413dp"
+        android:layout_height="158dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.233">
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/iotbutton5"
+                android:onClick="iotState"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="30dp"
+                tools:layout_editor_absoluteX="26dp"
+                tools:layout_editor_absoluteY="393dp" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="120dp"
+                android:layout_marginLeft="50dp"
+                android:text="led"
+                android:textAlignment="center"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:id="@+id/iotbutton6"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="10dp"
+                android:onClick="iotState"
+                tools:layout_editor_absoluteX="207dp"
+                tools:layout_editor_absoluteY="393dp" />
+            <TextView
+                android:layout_marginTop="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:layout_marginRight="50dp"
+                android:text="picam" />
+        </RelativeLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
