--- a/SkyObserver/app/src/main/res/layout/activity_picam.xml
+++ b/SkyObserver/app/src/main/res/layout/activity_picam.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"    >
+    android:orientation="vertical"
+    tools:context=".iot.PIcam">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <EditText
+        <!--<EditText
             android:id="@+id/address_edit"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -23,13 +24,16 @@
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="이동"
-            android:visibility="visible"/>
+            android:visibility="visible"/>-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Home Camera"
+            android:textAlignment="center"
+            android:textSize="30dp" />
     </LinearLayout>
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-
-
-</RelativeLayout>
+</LinearLayout>
