--- a/SkyObserver/app/src/main/res/layout/activity_picam.xml
+++ b/SkyObserver/app/src/main/res/layout/activity_picam.xml
@@ -5,26 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".iot.PIcam">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <!--<EditText
-            android:id="@+id/address_edit"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:hint="http://"
-            android:imeOptions="actionSearch"
-            android:inputType="textUri"
-            android:maxLines="1"/>
-        <Button
-            android:id="@+id/move_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="이동"
-            android:visibility="visible"/>-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,8 +15,23 @@
             android:textAlignment="center"
             android:textSize="30dp" />
     </LinearLayout>
-    <WebView
-        android:id="@+id/web_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <WebView
+            android:id="@+id/web_view"
+            android:layout_marginLeft="75dp"
+            android:layout_marginTop="100dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp" />
+        <Button
+            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="onClick"
+            android:id="@+id/doorBtn"
+            android:text="Open"/>
+    </LinearLayout>
 </LinearLayout>
